Change code language.

--- a/src/main/resources/templates/clock.html
+++ b/src/main/resources/templates/clock.html
@@ -23,6 +23,7 @@
 </head>
 
 <body class="vista-reloj">
+    <nav th:replace="template.html :: nav"></nav>
     <div class="container-sm">
         <!-- Heading -->
         <div class="d-flex justify-content-center my-4">
@@ -30,7 +31,7 @@
                 <button id="btn-chk" class="check_btn">
                     <span class="material-icons md-48">radio_button_unchecked</span>
                 </button>
-                <h1 class="text-center pt-2 heading">Nombre de la tarea</h1>
+                <h1 class="text-center pt-2 heading">Nombre de la task</h1>
             </div>
         </div>
 
