--- a/src/main/resources/templates/configuration.html
+++ b/src/main/resources/templates/configuration.html
@@ -27,10 +27,10 @@
     <div class="col-9 container borderbox-box">
       <div class="row ">
         <div class="col-10">
-          <label method="post" class="titulo">Gestión de proyectos</label>
+          <label method="post" class="titulo">Gestión de projects</label>
         </div>
         <div class="col justify-content-center mt-2">
-          <abbr title="Gestionar proyectos"><a th:href="@{/proyecto/}" type="button"
+          <abbr title="Gestionar projects"><a th:href="@{/project/}" type="button"
               class="but_tarea btn-success rounded-pill btn-lg">
               <span class="material-icons">
                 login
@@ -40,7 +40,7 @@
     </div>
     <br>
     <br>
-<form th:action="@{/configuracion/guardar}" method="post">
+<form th:action="@{/configuration/guardar}" method="post">
     <div class="col-9 container borderbox-box">
       <div class="row">
         <div class="col justify-content-center mt-2">
