--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -190,6 +190,11 @@ color:white
   font-size: 48px;
 }
 
+.material-icons {
+  display: inline-flex;
+  vertical-align: middle;
+}
+
 .timer_btn-start {
   background-color: #62d2a2;
 }
