--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="col-2 container d-flex flex-column justify-content-center">
-            <a th:href="@{/registro}" type="button" class="btn but btn-success">Registrarse</a>
+            <a th:href="@{/registration}" type="button" class="btn but btn-success">Registrarse</a>
 
             <br>
 
