--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -48,7 +48,7 @@
                     <input class="btn boton btn-success" type="submit" value="Ingresar">
                 </div>
                 <div class="container">
-                    <p class="derivada"><a th:href="@{/registro}">¿No estás registrado? ¡Registrate aquí!</a></p>
+                    <p class="derivada"><a th:href="@{/registration}">¿No estás registrado? ¡Registrate aquí!</a></p>
                 </div>
                 
                 
