--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -23,7 +23,7 @@
     <div class="row">
       <div class="col-8 py-3">
 
-        <form th:action="@{/registrar}" method="post">
+        <form th:action="@{/register}" method="post">
 
           <div class="col-8 container-fluid">
             <h1 class="text-decoration-underline titulo text-center">Registro</h1>
