--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -33,35 +33,35 @@
             <div class="col mb-2">
               <label for="inputEmail3" class="col-sm-2 col-form-label pre-control">Nombre*</label>
               <div class="col-sm-12 borderbox">
-                <input type="text" class="form-control" id="Nombre" name="nombre" th:value="${nombre}"/>
+                <input type="text" class="form-control" id="Nombre" name="name" th:value="${user.name}"/>
               </div>
             </div>
 
             <div class="col mb-2">
               <label for="inputEmail3" class="col-sm-2 col-form-label pre-control">Apellido*</label>
               <div class="col-sm-12  borderbox">
-                <input type="text" class="form-control" id="Apellido" name="apellido" th:value="${apellido}"/>
+                <input type="text" class="form-control" id="Apellido" name="lastName" th:value="${user.lastName}"/>
               </div>
             </div>
 
             <div class="col mb-2">
               <label for="inputEmail3" class="col-sm-2 col-form-label pre-control">Email*</label>
               <div class="col-sm-12  borderbox">
-                <input type="email" class="form-control" id="Mail" name="email" th:value="${email}"/>
+                <input type="email" class="form-control" id="Mail" name="email" th:value="${user.email}"/>
               </div>
             </div>
 
             <div class="col mb-2">
               <label for="inputPassword3" class="col-sm-2 col-form-label pre-control">Contraseña*</label>
               <div class="col-sm-12 borderbox">
-                <input type="password" class="form-control" id="Contraseña1" name="contrasena1" th:value="${contrasena1}"/>
+                <input type="password" class="form-control" id="Contraseña1" name="password" th:value="${password}"/>
               </div>
             </div>
 
             <div class="col mb-2">
               <label for="inputPassword3" class="col-sm-8 col-form-label pre-control">Repita Contraseña*</label>
               <div class="col-sm-12 borderbox">
-                <input type="password" class="form-control" id="Contraseña2" name="contrasena2" th:value="${contrasena2}"/>
+                <input type="password" class="form-control" id="Contraseña2" name="password2" th:value="${password2}"/>
               </div>
             </div>
             <div class="col my-3">
