--- a/src/main/resources/templates/mainView.html
+++ b/src/main/resources/templates/mainView.html
@@ -20,7 +20,7 @@
   <div class="borderedit container col-9 px-8 py-5 my-4 ">
 
     <div class="col-9 container">
-      <a class="fs-2 btn butG btn-success" th:href="@{/task/hoy(user_id=__${session.userSession.id}__)}">
+      <a class="fs-2 btn butG btn-success" th:href="@{/task/today(user_id=__${session.userSession.id}__)}">
         <div class="row">
           <div class="col-1">
             <img src="../static/img/sol.png" th:src="@{/img/sol.png}" alt="sol" class="imagen-box">
